--- a/blog.html
+++ b/blog.html
@@ -78,158 +78,6 @@
    </div>
  </div>
 </section>
-<!--
-<section class="ftco-section">
-  <div class="container">
-    <div class="row d-flex">
-      <div class="col-md-6 col-lg-3 d-flex ftco-animate">
-        <div class="blog-entry align-self-stretch">
-          <a href="blog-single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
-          </a>
-          <div class="text p-4">
-           <div class="meta mb-2">
-            <div><a href="#">July 20, 2020</a></div>
-            <div><a href="#">Admin</a></div>
-            <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
-          </div>
-          <h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-          <p><a href="#" class="btn btn-secondary">Read more</a></p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 col-lg-3 d-flex ftco-animate">
-      <div class="blog-entry align-self-stretch">
-        <a href="blog-single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
-        </a>
-        <div class="text p-4">
-         <div class="meta mb-2">
-          <div><a href="#">July 20, 2020</a></div>
-          <div><a href="#">Admin</a></div>
-          <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
-        </div>
-        <h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
-        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-        <p><a href="#" class="btn btn-secondary">Read more</a></p>
-      </div>
-    </div>
-  </div>
-  <div class="col-md-6 col-lg-3 d-flex ftco-animate">
-    <div class="blog-entry align-self-stretch">
-      <a href="blog-single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
-      </a>
-      <div class="text p-4">
-       <div class="meta mb-2">
-        <div><a href="#">July 20, 2020</a></div>
-        <div><a href="#">Admin</a></div>
-        <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
-      </div>
-      <h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
-      <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-      <p><a href="#" class="btn btn-secondary">Read more</a></p>
-    </div>
-  </div>
-</div>
-<div class="col-md-6 col-lg-3 d-flex ftco-animate">
-  <div class="blog-entry align-self-stretch">
-    <a href="blog-single.html" class="block-20" style="background-image: url('images/image_4.jpg');">
-    </a>
-    <div class="text p-4">
-     <div class="meta mb-2">
-      <div><a href="#">July 20, 2020</a></div>
-      <div><a href="#">Admin</a></div>
-      <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
-    </div>
-    <h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
-    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-    <p><a href="#" class="btn btn-secondary">Read more</a></p>
-  </div>
-</div>
-</div>
-
-<div class="col-md-6 col-lg-3 d-flex ftco-animate">
-  <div class="blog-entry align-self-stretch">
-    <a href="blog-single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
-    </a>
-    <div class="text p-4">
-     <div class="meta mb-2">
-      <div><a href="#">July 20, 2020</a></div>
-      <div><a href="#">Admin</a></div>
-      <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
-    </div>
-    <h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
-    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-    <p><a href="#" class="btn btn-secondary">Read more</a></p>
-  </div>
-</div>
-</div>
-<div class="col-md-6 col-lg-3 d-flex ftco-animate">
-  <div class="blog-entry align-self-stretch">
-    <a href="blog-single.html" class="block-20" style="background-image: url('images/image_4.jpg');">
-    </a>
-    <div class="text p-4">
-     <div class="meta mb-2">
-      <div><a href="#">July 20, 2020</a></div>
-      <div><a href="#">Admin</a></div>
-      <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
-    </div>
-    <h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
-    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-    <p><a href="#" class="btn btn-secondary">Read more</a></p>
-  </div>
-</div>
-</div>
-<div class="col-md-6 col-lg-3 d-flex ftco-animate">
-  <div class="blog-entry align-self-stretch">
-    <a href="blog-single.html" class="block-20" style="background-image: url('images/image_5.jpg');">
-    </a>
-    <div class="text p-4">
-     <div class="meta mb-2">
-      <div><a href="#">July 20, 2020</a></div>
-      <div><a href="#">Admin</a></div>
-      <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
-    </div>
-    <h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
-    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-    <p><a href="#" class="btn btn-secondary">Read more</a></p>
-  </div>
-</div>
-</div>
-<div class="col-md-6 col-lg-3 d-flex ftco-animate">
-  <div class="blog-entry align-self-stretch">
-    <a href="blog-single.html" class="block-20" style="background-image: url('images/image_6.jpg');">
-    </a>
-    <div class="text p-4">
-     <div class="meta mb-2">
-      <div><a href="#">July 20, 2020</a></div>
-      <div><a href="#">Admin</a></div>
-      <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
-    </div>
-    <h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
-    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-    <p><a href="#" class="btn btn-secondary">Read more</a></p>
-  </div>
-</div>
-</div>
-</div>
-<div class="row mt-5">
-  <div class="col text-center">
-    <div class="block-27">
-      <ul>
-        <li><a href="#">&lt;</a></li>
-        <li class="active"><span>1</span></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">4</a></li>
-        <li><a href="#">5</a></li>
-        <li><a href="#">&gt;</a></li>
-      </ul>
-    </div>
-  </div>
-</div>
-</div>
-</section> -->
-
 
 <footer class="footer">
  <div class="container">
@@ -241,7 +89,7 @@
       <li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=100010958287622" target="_blank" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="fa fa-facebook"></span></a></li>
       <li class="ftco-animate"><a href="https://www.youtube.com/channel/UCooMuiq5fnbR0MlcQ3vLdsQ/" target="_blank" data-toggle="tooltip" data-placement="top" title="YouTube"><span class="fa fa-youtube-play"></span></a></li>
     </ul>
-    <p><a href="#" class="btn btn-quarternary">Donate Now</a></p>
+    <p><a href="index.html#donate" class="btn btn-quarternary">Donate Now</a></p>
   </div>
   <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
 
