--- a/about.html
+++ b/about.html
@@ -30,8 +30,8 @@
     <div class="row">
      <div class="col-md-6 d-flex align-items-center">
       <p class="mb-0 phone pl-md-2">
-       <a href="#" class="mr-2"><span class="fa fa-phone mr-1"></span> 0129-4101162 </a>
-       <a href="#"><span class="fa fa-paper-plane mr-1"></span> info@janaksewasamiti.in </a>
+       <a href="tel:0129-4101162" class="mr-2"><span class="fa fa-phone mr-1"></span> 0129-4101162 </a>
+       <a href="mailto:info@janaksewasamiti.in"><span class="fa fa-paper-plane mr-1"></span> info@janaksewasamiti.in </a>
      </p>
    </div>
    <div class="col-md-6 d-flex justify-content-md-end">
@@ -59,7 +59,7 @@
        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
        <li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>
        <li class="nav-item"><a href="volunteer.html" class="nav-link">Volunteer</a></li>
-       <li class="nav-item"><a href="blog.html" class="nav-link">Image Gallery</a></li>
+       <li class="nav-item"><a href="image-gallery.html" class="nav-link">Image Gallery</a></li>
        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
      </ul>
    </div>
@@ -84,10 +84,10 @@
   <div class="row justify-content-center pb-5">
     <div class="col-md-7 heading-section text-center ftco-animate">
      <span class="subheading">From the desk of the President</span>
-     <hr style="width:30%;background-color:#5DADE2">
+     <hr align='center' style="width:30%;background-color:#5DADE2">
      <h2>Arun Mehra</h2>
      <div class="volunteer" align=center>
-      <div class="img" style="background-image: url(images/Akarsh.png); width:250px; height:250px display:flexbox"></div>
+      <div class="img" style="background-image: url(images/m1.png); width:250px; height:250px display:flexbox"></div>
       <!-- <div class="text text-1" style="width:40%;">
        <span>President</span>
      </div> -->
@@ -111,14 +111,9 @@
    <div class="row justify-content-center pb-5">
      <div class="col-md-7 heading-section text-center ftco-animate">
       <span class="subheading">Call from the founder President</span>
-      <hr style="width:30%;background-color:#5DADE2">
+      <hr align='center' style="width:30%;background-color:#5DADE2">
       <h2>Perala Ratnam</h2>
-      <div class="volunteer" align=center>
-       <div class="img" style="background-image: url(images/Akarsh.png); width:250px; height:250px display:flexbox"></div>
-       <!-- <div class="text text-1" style="width:41%;">
-        <span>Founder President</span>
-      </div> -->
-    </div>
+
        <span class="subheading" style="color:#4B878BFF">Founder President, Janak Sewa Samiti<br>H.E. Former Indian Ambassador</span>
        <!-- <br><br><span class="subheading">Greetings from Janak Sewa Samiti</span> -->
        <br><div align="justify" style="color:#626567">India is going through a crucial period of her history, tenaciously clinging to a fast sagging but an Inspiring socialist democracy. She is facing a serious challenge of her very existence as a free country. We should be prepared to meet the challenge with a deep sense of patriotism, complete dedication coupled with strict discipline and hard work. We should, for example, ruthlessly eradicate rampant corruption, sychophancy , etc.,which are eating into the very vitals of this nation and establish in its place an Impartial and Just government which can function genuinely in the interests of the people. This will make our country truly great. Please take serious note of the lessons of our history. If we fail to act now, history will not forgive us, and if we Succeed, history will not forget us</div>
@@ -204,9 +199,24 @@
  <div class="row ftco-animate">
   <div class="col-md-12">
     <div class="carousel-testimony owl-carousel">
+
       <div class="item">
         <div class="testimony-wrap d-flex">
-          <div class="user-img" style="background-image: url(images/Akarsh.png)">
+          <div class="user-img" style="background-image: url(images/m1.png)">
+          </div>
+          <div class="text pl-4">
+           <span class="quote d-flex align-items-center justify-content-center">
+            <i class="fa fa-user-o"></i>
+          </span>
+         <p class="name">Sh. Arun Mehra</p>
+         <span class="position">President <br> +91-9810479728 <br> arun_mehra63@yahoo.com</span>
+       </div>
+      </div>
+      </div>
+
+      <div class="item">
+        <div class="testimony-wrap d-flex">
+          <div class="user-img" style="background-image: url(images/m2.png)">
           </div>
           <div class="text pl-4">
            <span class="quote d-flex align-items-center justify-content-center">
@@ -219,7 +229,7 @@
       </div>
  <div class="item">
    <div class="testimony-wrap d-flex">
-     <div class="user-img" style="background-image: url(images/Akarsh.png)">
+     <div class="user-img" style="background-image: url(images/m10.png)">
      </div>
      <div class="text pl-4">
       <span class="quote d-flex align-items-center justify-content-center">
@@ -232,7 +242,7 @@
  </div>
 <div class="item">
   <div class="testimony-wrap d-flex">
-    <div class="user-img" style="background-image: url(images/person_1.jpg)">
+    <div class="user-img" style="background-image: url(images/m9.png)"person_>
     </div>
     <div class="text pl-4">
      <span class="quote d-flex align-items-center justify-content-center">
@@ -245,7 +255,7 @@
 </div>
 <div class="item">
   <div class="testimony-wrap d-flex">
-    <div class="user-img" style="background-image: url(images/person_1.jpg)">
+    <div class="user-img" style="background-image: url(images/m8.png)">
     </div>
     <div class="text pl-4">
      <span class="quote d-flex align-items-center justify-content-center">
@@ -256,46 +266,77 @@
  </div>
 </div>
 </div>
+
 <div class="item">
   <div class="testimony-wrap d-flex">
-    <div class="user-img" style="background-image: url(images/person_1.jpg)">
+    <div class="user-img" style="background-image: url(images/m5.png)">
     </div>
     <div class="text pl-4">
      <span class="quote d-flex align-items-center justify-content-center">
       <i class="fa fa-user-o"></i>
     </span>
-   <p class="name">Sh. MP Mangla</p>
-   <span class="position">Member <br> +91-129-2292519 <br></br></span>
-</div>
-</div>
-</div>
-<div class="item">
-  <div class="testimony-wrap d-flex">
-    <div class="user-img" style="background-image: url(images/person_1.jpg)">
-    </div>
-    <div class="text pl-4">
-     <span class="quote d-flex align-items-center justify-content-center">
-      <i class="fa fa-user-o"></i>
-    </span>
-   <p class="name">Sh. BS Jindal</p>
-   <span class="position">Member <br> +91-9313701888 <br></br></span>
+   <p class="name">Sh. Rajesh Mehra</p>
+   <span class="position">Member <br> +91-9812234505 <br></br></span>
  </div>
 </div>
 </div>
 
 <div class="item">
   <div class="testimony-wrap d-flex">
-    <div class="user-img" style="background-image: url(images/Akarsh.png)">
+    <div class="user-img" style="background-image: url(images/m4.png)">
     </div>
     <div class="text pl-4">
      <span class="quote d-flex align-items-center justify-content-center">
       <i class="fa fa-user-o"></i>
     </span>
-   <p class="name">Sh. Arun Mehra</p>
-   <span class="position">President <br> +91-9810479728 <br> arun_mehra63@yahoo.com</span>
+   <p class="name">Dr. Rajesh Gupta</p>
+   <span class="position">Member <br> +91-9810310187 <br></br></span>
  </div>
 </div>
 </div>
+
+<div class="item">
+  <div class="testimony-wrap d-flex">
+    <div class="user-img" style="background-image: url(images/m6.png)">
+    </div>
+    <div class="text pl-4">
+     <span class="quote d-flex align-items-center justify-content-center">
+      <i class="fa fa-user-o"></i>
+    </span>
+   <p class="name">Sh. Ajay Mehra</p>
+   <span class="position">Member <br> +91-9810113331 <br></br></span>
+ </div>
+</div>
+</div>
+
+<div class="item">
+  <div class="testimony-wrap d-flex">
+    <div class="user-img" style="background-image: url(images/m7.png)">
+    </div>
+    <div class="text pl-4">
+     <span class="quote d-flex align-items-center justify-content-center">
+      <i class="fa fa-user-o"></i>
+    </span>
+   <p class="name">Sh. P.K. Soni</p>
+   <span class="position">Member <br> +91-8506009810 <br></br></span>
+ </div>
+</div>
+</div>
+
+<div class="item">
+  <div class="testimony-wrap d-flex">
+    <div class="user-img" style="background-image: url(images/m3.png)">
+    </div>
+    <div class="text pl-4">
+     <span class="quote d-flex align-items-center justify-content-center">
+      <i class="fa fa-user-o"></i>
+    </span>
+   <p class="name">C.M. Mahajan</p>
+   <span class="position">Member <br> +91-9810342901 <br></br></span>
+ </div>
+</div>
+</div>
+
 </div>
 </div>
 </div>
@@ -352,7 +393,7 @@
       <li><a href="index.html" class="py-2 d-block">Home</a></li>
       <li><a href="about.html" class="py-2 d-block">About</a></li>
       <li><a href="volunteer.html" class="py-2 d-block">Volunteer</a></li>
-      <li><a href="blog.html" class="py-2 d-block">Image Gallery</a></li>
+      <li><a href="image-gallery.html" class="py-2 d-block">Image Gallery</a></li>
       <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
     </ul>
   </div>
