--- a/image-gallery.html
+++ b/image-gallery.html
@@ -30,8 +30,8 @@
     <div class="row">
      <div class="col-md-6 d-flex align-items-center">
       <p class="mb-0 phone pl-md-2">
-       <aclass="mr-2"><span class="fa fa-phone mr-1"></span> 0129-4101162 </a>
-       <a><span class="fa fa-paper-plane mr-1"></span> info@janaksewasamiti.in </a>
+       <a href="tel:0129-4101162"class="mr-2"><span class="fa fa-phone mr-1"></span> 0129-4101162 </a>
+       <a href="mailto:info@janaksewasamiti.in"><span class="fa fa-paper-plane mr-1"></span> info@janaksewasamiti.in </a>
      </p>
    </div>
    <div class="col-md-6 d-flex justify-content-md-end">
@@ -59,7 +59,7 @@
        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
        <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
        <li class="nav-item"><a href="volunteer.html" class="nav-link">Volunteer</a></li>
-       <li class="nav-item active"><a href="blog.html" class="nav-link">Image Gallery</a></li>
+       <li class="nav-item active"><a href="image-gallery.html" class="nav-link">Image Gallery</a></li>
        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
      </ul>
    </div>
@@ -79,6 +79,82 @@
  </div>
 </section>
 
+
+<!-- start -->
+
+  <h4 align='center' style="padding:25px 25px 0px 25px">Sneh Ashram</h4>
+  <hr align='center' width='100px'>
+  <div class="gallery-image">
+    <div class="img-box">
+      <img src="images/img1.png " alt="" />
+      <div class="transparent-box">
+        <div class="caption">
+          <p>Library</p>
+          <p class="opacity-low">Architect Design</p>
+        </div>
+      </div>
+    </div>
+    <div class="img-box">
+      <img src="images/img2.png" alt="" />
+      <div class="transparent-box">
+        <div class="caption">
+          <p>Night Sky</p>
+          <p class="opacity-low">Cinematic</p>
+        </div>
+      </div>
+    </div>
+    <div class="img-box">
+      <img src="images/img3.png" alt="" />
+      <div class="transparent-box">
+        <div class="caption">
+          <p>Tea Talk</p>
+          <p class="opacity-low">Composite</p>
+        </div>
+      </div>
+    </div>
+    <div class="img-box">
+      <img src="images/img4.png" alt="" />
+      <div class="transparent-box">
+        <div class="caption">
+          <p>Road</p>
+          <p class="opacity-low">Landscape</p>
+        </div>
+      </div>
+    </div>
+    <div class="img-box">
+      <img src="images/img5.png" alt="" />
+      <div class="transparent-box">
+        <div class="caption">
+          <p>Sea</p>
+          <p class="opacity-low">Cityscape</p>
+        </div>
+      </div>
+    </div>
+    <div class="img-box">
+      <img src="images/img6.png" alt="" />
+      <div class="transparent-box">
+        <div class="caption">
+          <p>Vintage</p>
+          <p class="opacity-low">Cinematic</p>
+        </div>
+      </div>
+    </div>
+    <div class="img-box">
+      <img src="images/img7.jpeg" alt="" />
+      <div class="transparent-box">
+        <div class="caption">
+          <p>Vintage</p>
+          <p class="opacity-low">Cinematic</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+<!-- end -->
+
+
+
+<!-- Footer -->
 <footer class="footer">
  <div class="container">
   <div class="row">
@@ -113,7 +189,7 @@
       <li><a href="index.html" class="py-2 d-block">Home</a></li>
       <li><a href="about.html" class="py-2 d-block">About</a></li>
       <li><a href="volunteer.html" class="py-2 d-block">Volunteer</a></li>
-      <li><a href="blog.html" class="py-2 d-block">Inage Gallery</a></li>
+      <li><a href="image-gallery.html" class="py-2 d-block">Inage Gallery</a></li>
       <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
     </ul>
   </div>
