--- a/volunteer.html
+++ b/volunteer.html
@@ -30,8 +30,8 @@
     <div class="row">
      <div class="col-md-6 d-flex align-items-center">
       <p class="mb-0 phone pl-md-2">
-       <a href="#" class="mr-2"><span class="fa fa-phone mr-1"></span> 0129-4101162 </a>
-       <a href="#"><span class="fa fa-paper-plane mr-1"></span> info@janaksewasamiti.in</a>
+       <a href="tel:0129-4101162" class="mr-2"><span class="fa fa-phone mr-1"></span> 0129-4101162 </a>
+       <a href="mailto:info@janaksewasamiti.in"><span class="fa fa-paper-plane mr-1"></span> info@janaksewasamiti.in</a>
      </p>
    </div>
    <div class="col-md-6 d-flex justify-content-md-end">
@@ -59,7 +59,7 @@
        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
        <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
        <li class="nav-item active"><a href="volunteer.html" class="nav-link">Volunteer</a></li>
-       <li class="nav-item"><a href="blog.html" class="nav-link">Image Gallery</a></li>
+       <li class="nav-item"><a href="image-gallery.html" class="nav-link">Image Gallery</a></li>
        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
      </ul>
    </div>
@@ -246,7 +246,7 @@
       <li><a href="index.html" class="py-2 d-block">Home</a></li>
       <li><a href="about.html" class="py-2 d-block">About</a></li>
       <li><a href="volunteer.html" class="py-2 d-block">Volunteer</a></li>
-      <li><a href="blog.html" class="py-2 d-block">Image Gallery</a></li>
+      <li><a href="image-gallery.html" class="py-2 d-block">Image Gallery</a></li>
       <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
     </ul>
   </div>
