--- a/about.html
+++ b/about.html
@@ -193,7 +193,7 @@
   <div class="row justify-content-center pb-5">
     <div class="col-md-7 heading-section heading-section-white text-center ftco-animate">
      <!-- <span class="subheading">Testimony</span> -->
-     <h2>MANAGING COOMMITTEE</h2>
+     <h2>MANAGING COMMITTEE</h2>
    </div>
  </div>
  <div class="row ftco-animate">
