--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 	</div>
 	<div class="col-md-6 col-lg-3">
 	  <div class="volunteer">
-	   <div class="img" style="background-image: url(images/team4.jpg);"></div>
+	   <div class="img" style="background-image: url(images/team4.jpeg);"></div>
 	   <div class="text text-4" style="background-color:#EC732F;width:85%">
 	    <h3>Sarang Sharma</h3>
 	    <span>Volunteer</span>
