--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
      <p class="mb-0 d-flex">
       <a href="https://www.facebook.com/profile.php?id=100010958287622" target="_blank" class="d-flex align-items-center justify-content-center" ><span class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
       <!-- <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"><i class="sr-only">Twitter</i></span></a> -->
-      <a href="https://www.youtube.com/channel/UCooMuiq5fnbR0MlcQ3vLdsQ/" target="_blank" class="d-flex align-items-center justify-content-center"><span class="fa fa-youtube-play"><i class="sr-only">Instagram</i></span></a>
+      <a href="https://www.youtube.com/channel/UCooMuiq5fnbR0MlcQ3vLdsQ/videos" target="_blank" class="d-flex align-items-center justify-content-center"><span class="fa fa-youtube-play"><i class="sr-only">Instagram</i></span></a>
       <!-- <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-dribbble"><i class="sr-only">Dribbble</i></span></a> -->
     </p>
   </div>
@@ -120,7 +120,7 @@
   </div>
 
 
-<h3 style="color:#4B878BFF; text-align:center"><br></br><br><b>Facilities provided by Sneh Aashram</br></b><br></h3>
+<h3 style="color:#4B878BFF; text-align:center"><br></br><br><b>Facilities provided by Sneh Ashram</br></b><br></h3>
  <div class="row">
   <div class="col-md-3 services-2 w-100 text-center">
    <div class="icon icon-1 d-flex align-items-center justify-content-center"><span class="fa fa-bed"></span></div>
@@ -364,10 +364,10 @@
   <div class="row">
    <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
     <h2 class="footer-heading">Janak Sewa Samiti.</h2>
-    <p>Sneh Aashram - an Old age home.</p>
+    <p>Sneh Ashram - an Old age home.</p>
     <ul class="ftco-footer-social p-0">
       <li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=100010958287622" target="_blank" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="fa fa-facebook"></span></a></li>
-      <li class="ftco-animate"><a href="https://www.youtube.com/channel/UCooMuiq5fnbR0MlcQ3vLdsQ/" target="_blank" data-toggle="tooltip" data-placement="top" title="YouTube"><span class="fa fa-youtube-play"></span></a></li>
+      <li class="ftco-animate"><a href="https://www.youtube.com/channel/UCooMuiq5fnbR0MlcQ3vLdsQ/videos" target="_blank" data-toggle="tooltip" data-placement="top" title="YouTube"><span class="fa fa-youtube-play"></span></a></li>
     </ul>
     <p><a href="index.html#donate" class="btn btn-quarternary">Donate Now</a></p>
   </div>
