--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<p class="mb-0 d-flex">
 							<a href="https://www.facebook.com/profile.php?id=100010958287622" target="_blank" class="d-flex align-items-center justify-content-center" ><span class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
 				      <!-- <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"><i class="sr-only">Twitter</i></span></a> -->
-				      <a href="https://www.youtube.com/channel/UCooMuiq5fnbR0MlcQ3vLdsQ/" target="_blank" class="d-flex align-items-center justify-content-center"><span class="fa fa-youtube-play"><i class="sr-only">Instagram</i></span></a>
+				      <a href="https://www.youtube.com/channel/UCooMuiq5fnbR0MlcQ3vLdsQ/videos" target="_blank" class="d-flex align-items-center justify-content-center"><span class="fa fa-youtube-play"><i class="sr-only">Instagram</i></span></a>
 				      <!-- <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-dribbble"><i class="sr-only">Dribbble</i></span></a> -->
 						</p>
 					</div>
@@ -78,7 +78,7 @@
 								<h2>Help the poor in need</h2>
 								<h1 class="mb-3">Lend the helping hand get involved</h1>
 								<div class="d-flex meta">
-									<div class=""><p class="mb-0"><a href="#" class="btn btn-secondary py-3 px-2 px-md-4">Become A Volunteer</a></p></div>
+									<div class=""><p class="mb-0"><a href="volunteer.html" class="btn btn-secondary py-3 px-2 px-md-4">Become A Volunteer</a></p></div>
 									<a href="#" class="d-flex align-items-center button-link">
 										<div class="button-video d-flex align-items-center justify-content-center">
 											<span class="fa fa-play"></span>
@@ -101,7 +101,7 @@
 								<h2>Raising Hope</h2>
 								<h1 class="mb-3">Discover Non-Profit Charity Platform</h1>
 								<div class="d-flex meta">
-									<div class=""><p class="mb-0"><a href="#" class="btn btn-secondary py-3 px-2 px-md-4">Become A Volunteer</a></p></div>
+									<div class=""><p class="mb-0"><a href="volunteer.html" class="btn btn-secondary py-3 px-2 px-md-4">Become A Volunteer</a></p></div>
 									<a href="#" class="d-flex align-items-center button-link">
 										<div class="button-video d-flex align-items-center justify-content-center">
 											<span class="fa fa-play"></span>
@@ -124,7 +124,7 @@
 								<h2>Raising Hope</h2>
 								<h1 class="mb-3">Giving Hope to the Homeless People</h1>
 								<div class="d-flex meta">
-									<div class=""><p class="mb-0"><a href="#" class="btn btn-secondary py-3 px-2 px-md-4">Become A Volunteer</a></p></div>
+									<div class=""><p class="mb-0"><a href="volunteer.html" class="btn btn-secondary py-3 px-2 px-md-4">Become A Volunteer</a></p></div>
 									<a href="#" class="d-flex align-items-center button-link">
 										<div class="button-video d-flex align-items-center justify-content-center">
 											<span class="fa fa-play"></span>
@@ -290,7 +290,7 @@
 							</div>
 						</div>
 					</div>
-					<p><a href="#" class="btn btn-secondary btn-outline-secondary">Become A Volunteer</a></p>
+					<p><a href="volunteer.html" class="btn btn-secondary btn-outline-secondary">Become A Volunteer</a></p>
 				</div>
 			</div>
 		</div>
@@ -579,7 +579,7 @@
 					</div>
 				</div>
 				<div class="col-md-4 col-lg-4 d-flex align-items-center justify-content-end">
-					<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-4">Become A Volunteer</a></p>
+					<p class="mb-0"><a href="volunteer.html" class="btn btn-primary py-3 px-4">Become A Volunteer</a></p>
 				</div>
 			</div>
 		</div>
@@ -591,10 +591,10 @@
 	  <div class="row">
 	   <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
 	    <h2 class="footer-heading">Janak Sewa Samiti.</h2>
-	    <p>Sneh Aashram - an Old age home.</p>
+	    <p>Sneh Ashram - an Old age home.</p>
 	    <ul class="ftco-footer-social p-0">
 	      <li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=100010958287622" target="_blank" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="fa fa-facebook"></span></a></li>
-	      <li class="ftco-animate"><a href="https://www.youtube.com/channel/UCooMuiq5fnbR0MlcQ3vLdsQ/" target="_blank" data-toggle="tooltip" data-placement="top" title="YouTube"><span class="fa fa-youtube-play"></span></a></li>
+	      <li class="ftco-animate"><a href="https://www.youtube.com/channel/UCooMuiq5fnbR0MlcQ3vLdsQ/videos" target="_blank" data-toggle="tooltip" data-placement="top" title="YouTube"><span class="fa fa-youtube-play"></span></a></li>
 	    </ul>
 	    <p><a href="#donate" class="btn btn-quarternary">Donate Now</a></p>
 	  </div>
