--- a/image-gallery.html
+++ b/image-gallery.html
@@ -89,8 +89,7 @@
       <img src="images/img1.png " alt="" />
       <div class="transparent-box">
         <div class="caption">
-          <p>Library</p>
-          <p class="opacity-low">Architect Design</p>
+          <p>Lunch Time</p>
         </div>
       </div>
     </div>
@@ -98,8 +97,7 @@
       <img src="images/img2.png" alt="" />
       <div class="transparent-box">
         <div class="caption">
-          <p>Night Sky</p>
-          <p class="opacity-low">Cinematic</p>
+          <p>Annual Function</p>
         </div>
       </div>
     </div>
@@ -107,8 +105,7 @@
       <img src="images/img3.png" alt="" />
       <div class="transparent-box">
         <div class="caption">
-          <p>Tea Talk</p>
-          <p class="opacity-low">Composite</p>
+          <p>Ganga Snan</p>
         </div>
       </div>
     </div>
@@ -116,8 +113,7 @@
       <img src="images/img4.png" alt="" />
       <div class="transparent-box">
         <div class="caption">
-          <p>Road</p>
-          <p class="opacity-low">Landscape</p>
+          <p>Health camp</p>
         </div>
       </div>
     </div>
@@ -125,8 +121,7 @@
       <img src="images/img5.png" alt="" />
       <div class="transparent-box">
         <div class="caption">
-          <p>Sea</p>
-          <p class="opacity-low">Cityscape</p>
+          <p>Navratri</p>
         </div>
       </div>
     </div>
@@ -134,8 +129,7 @@
       <img src="images/img6.png" alt="" />
       <div class="transparent-box">
         <div class="caption">
-          <p>Vintage</p>
-          <p class="opacity-low">Cinematic</p>
+          <p>Student visit</p>
         </div>
       </div>
     </div>
@@ -143,12 +137,25 @@
       <img src="images/img7.jpeg" alt="" />
       <div class="transparent-box">
         <div class="caption">
-          <p>Vintage</p>
-          <p class="opacity-low">Cinematic</p>
+          <p>Morning Exercise</p>
         </div>
       </div>
     </div>
-
+    <iframe class="img-box"
+src="https://www.youtube.com/watch?v=9kni01dNnNA">
+</iframe>
+<iframe class="img-box"
+src="https://www.youtube.com/watch?v=9kni01dNnNA">
+</iframe>
+<iframe class="img-box"
+src="https://www.youtube.com/watch?v=Cts73mKOy4g">
+</iframe>
+<iframe class="img-box"
+src="https://www.youtube.com/watch?v=4QxBghQCpt4">
+</iframe>
+<iframe class="img-box"
+src="https://www.youtube.com/watch?v=6BQ9IbIcTW0">
+</iframe>
   </div>
 <!-- end -->
 
