--- a/image-gallery.html
+++ b/image-gallery.html
@@ -141,20 +141,29 @@
         </div>
       </div>
     </div>
-    <iframe class="img-box"
-src="https://www.youtube.com/watch?v=9kni01dNnNA">
+<iframe class="img-box"
+src="https://www.youtube.com/embed/VahbqGgUDbM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 <iframe class="img-box"
-src="https://www.youtube.com/watch?v=9kni01dNnNA">
+src="https://www.youtube.com/embed/iHTXzwPHf8A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 <iframe class="img-box"
-src="https://www.youtube.com/watch?v=Cts73mKOy4g">
+src="https://www.youtube.com/embed/vJxYSksALUU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 <iframe class="img-box"
-src="https://www.youtube.com/watch?v=4QxBghQCpt4">
+src="https://www.youtube.com/embed/YgCJcCpbRLw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 <iframe class="img-box"
-src="https://www.youtube.com/watch?v=6BQ9IbIcTW0">
+ src="https://www.youtube.com/embed/AVoMNDsvUis" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+<iframe class="img-box"
+src="https://www.youtube.com/embed/EipzEUcCcbU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+<iframe class="img-box"
+src="https://www.youtube.com/embed/AL_qAxUfUWQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+<iframe class="img-box"
+src="https://www.youtube.com/embed/vJxYSksALUU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
   </div>
 <!-- end -->
