--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 								<h1 class="mb-3">Lend the helping hand get involved</h1>
 								<div class="d-flex meta">
 									<div class=""><p class="mb-0"><a href="volunteer.html" class="btn btn-secondary py-3 px-2 px-md-4">Become A Volunteer</a></p></div>
-									<a href="#" class="d-flex align-items-center button-link">
+									<a href="https://www.youtube.com/channel/UCooMuiq5fnbR0MlcQ3vLdsQ/videos" target="_blank" class="d-flex align-items-center button-link">
 										<div class="button-video d-flex align-items-center justify-content-center">
 											<span class="fa fa-play"></span>
 										</div>
@@ -102,7 +102,7 @@
 								<h1 class="mb-3">Discover Non-Profit Charity Platform</h1>
 								<div class="d-flex meta">
 									<div class=""><p class="mb-0"><a href="volunteer.html" class="btn btn-secondary py-3 px-2 px-md-4">Become A Volunteer</a></p></div>
-									<a href="#" class="d-flex align-items-center button-link">
+									<a href="https://www.youtube.com/channel/UCooMuiq5fnbR0MlcQ3vLdsQ/videos" target="_blank" class="d-flex align-items-center button-link">
 										<div class="button-video d-flex align-items-center justify-content-center">
 											<span class="fa fa-play"></span>
 										</div>
@@ -125,7 +125,7 @@
 								<h1 class="mb-3">Giving Hope to the Homeless People</h1>
 								<div class="d-flex meta">
 									<div class=""><p class="mb-0"><a href="volunteer.html" class="btn btn-secondary py-3 px-2 px-md-4">Become A Volunteer</a></p></div>
-									<a href="#" class="d-flex align-items-center button-link">
+									<a href="https://www.youtube.com/channel/UCooMuiq5fnbR0MlcQ3vLdsQ/videos" target="_blank" class="d-flex align-items-center button-link">
 										<div class="button-video d-flex align-items-center justify-content-center">
 											<span class="fa fa-play"></span>
 										</div>
