--- a/contact.html
+++ b/contact.html
@@ -138,12 +138,14 @@
 												<div class="form-group">
 													<label class="label" for="name">Full Name</label>
 													<input type="text" class="form-control" name="name" id="name" placeholder="Name" required>
+													<span class="error">* <?php echo $nameErr;?></span>
 												</div>
 											</div>
 											<div class="col-md-6">
 												<div class="form-group">
 													<label class="label" for="email">Email Address</label>
 													<input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
+													 <span class="error">* <?php echo $emailErr;?></span>
 												</div>
 											</div>
 											<div class="col-md-12">
