--- a/volunteer.html
+++ b/volunteer.html
@@ -174,19 +174,19 @@
           </div>
           <div class="col-md-12">
             <div class="form-group">
-              <label style="color:white" class="label" for="name"><b>Address</b> <span style="color:red">*</span></label>
+              <label style="color:white" class="label" for="address"><b>Address</b> <span style="color:red">*</span></label>
               <input type="text" class="form-control" name="address" id="address" placeholder="Address" required>
             </div>
           </div>
           <div class="col-md-12">
             <div class="form-group">
-              <label style="color:white" class="label" for="name"><b>City/Country</b> <span style="color:red">*</span></label>
+              <label style="color:white" class="label" for="country"><b>City/Country</b> <span style="color:red">*</span></label>
               <input type="text" class="form-control" name="city" id="city" placeholder="City and Country" required>
             </div>
           </div>
           <div class="col-md-12">
             <div class="form-group">
-              <label style="color:white" class="label" for="name"><b>Qualification/Occupation</b> <span style="color:red">*</span></label>
+              <label style="color:white" class="label" for="qualification"><b>Qualification/Occupation</b> <span style="color:red">*</span></label>
               <input type="text" class="form-control" name="qualification" id="qualification" placeholder="Qualification/Occupation" required>
             </div>
           </div>
@@ -204,7 +204,7 @@
           </div>
           <div class="col-md-12">
             <div class="form-group">
-              <input type="submit" name="sendmail" value="Submit Form" data-submit="...sending your application!" class="btn btn-primary">
+              <input type="submit" name="sendform" value="Submit Form" data-submit="...sending your application!" class="btn btn-primary">
               <div class="submitting"></div>
             </div>
           </div>
