--- a/contact.html
+++ b/contact.html
@@ -137,21 +137,21 @@
 											<div class="col-md-6">
 												<div class="form-group">
 													<label class="label" for="name">Full Name</label>
-													<input type="text" class="form-control" name="name" id="name" placeholder="Name" required>
+													<input type="text" class="form-control" name="name" id="name" placeholder="Name" autocomplete="off" required>
 													<span class="error">* <?php echo $nameErr;?></span>
 												</div>
 											</div>
 											<div class="col-md-6">
 												<div class="form-group">
 													<label class="label" for="email">Email Address</label>
-													<input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
+													<input type="email" class="form-control" name="email" id="email" placeholder="Email" autocomplete="off" required>
 													 <span class="error">* <?php echo $emailErr;?></span>
 												</div>
 											</div>
 											<div class="col-md-12">
 												<div class="form-group">
 													<label class="label" for="subject">Subject</label>
-													<input type="text" class="form-control" name="subject" id="subject" placeholder="Subject">
+													<input type="text" class="form-control" name="subject" id="subject" autocomplete="off" placeholder="Subject">
 												</div>
 											</div>
 											<div class="col-md-12">
