--- a/volunteer.html
+++ b/volunteer.html
@@ -151,49 +151,49 @@
           <div class="col-md-6">
             <div class="form-group">
               <label style="color:white" class="label" for="firstname"><b>First Name</b> <span style="color:red">*</span></label>
-              <input type="text" class="form-control" name="fname" id="lname" placeholder="First Name" required>
+              <input type="text" class="form-control" name="fname" id="lname" placeholder="First Name" autocomplete="off" required>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
               <label style="color:white" class="label" for="lastname"><b>Last Name</b> <span style="color:red">*</span></label>
-              <input type="text" class="form-control" name="lname" id="lname" placeholder="Last Name" required>
+              <input type="text" class="form-control" name="lname" id="lname" placeholder="Last Name" autocomplete="off" required>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
               <label style="color:white" class="label" for="email"><b>Email Address</b> <span style="color:red">*</span></label>
-              <input type="email" class="form-control" name="email" id="email" placeholder="your_email@something.com" required>
+              <input type="email" class="form-control" name="email" id="email" placeholder="your_email@something.com" autocomplete="off" required>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
               <label style="color:white" class="label" for="phone"><b> Phone Number </b> <span style="color:red">*</span></label>
-              <input type="text" class="form-control" name="phone" id="phone" placeholder="Phone Number" required>
+              <input type="text" class="form-control" name="phone" id="phone" placeholder="Phone Number" autocomplete="off" required>
             </div>
           </div>
           <div class="col-md-12">
             <div class="form-group">
               <label style="color:white" class="label" for="address"><b>Address</b> <span style="color:red">*</span></label>
-              <input type="text" class="form-control" name="address" id="address" placeholder="Address" required>
+              <input type="text" class="form-control" name="address" id="address" placeholder="Address" autocomplete="off" required>
             </div>
           </div>
           <div class="col-md-12">
             <div class="form-group">
               <label style="color:white" class="label" for="country"><b>City/Country</b> <span style="color:red">*</span></label>
-              <input type="text" class="form-control" name="city" id="city" placeholder="City and Country" required>
+              <input type="text" class="form-control" name="city" id="city" placeholder="City and Country" autocomplete="off" required>
             </div>
           </div>
           <div class="col-md-12">
             <div class="form-group">
               <label style="color:white" class="label" for="qualification"><b>Qualification/Occupation</b> <span style="color:red">*</span></label>
-              <input type="text" class="form-control" name="qualification" id="qualification" placeholder="Qualification/Occupation" required>
+              <input type="text" class="form-control" name="qualification" id="qualification" placeholder="Qualification/Occupation" autocomplete="off" required>
             </div>
           </div>
           <div class="col-md-12">
             <div class="form-group">
               <label style="color:white" class="label" for="volunteeringfor"> <b>Volunteering For</b></label>
-              <input type="text" class="form-control" name="volunteeringfor" id="volunteeringfor" placeholder="Volunteering For ?">
+              <input type="text" class="form-control" name="volunteeringfor" id="volunteeringfor" placeholder="Volunteering For ?" autocomplete="off">
             </div>
           </div>
           <div class="col-md-12">
