--- a/contact.html
+++ b/contact.html
@@ -136,16 +136,16 @@
 										<div class="row">
 											<div class="col-md-6">
 												<div class="form-group">
-													<label class="label" for="name">Full Name</label>
+													<label class="label" for="name">Full Name</label><span style="color:red"> *</span>
 													<input type="text" class="form-control" name="name" id="name" placeholder="Name" autocomplete="off" required>
-													<span class="error">* <?php echo $nameErr;?></span>
+
 												</div>
 											</div>
 											<div class="col-md-6">
 												<div class="form-group">
-													<label class="label" for="email">Email Address</label>
+													<label class="label" for="email">Email Address</label><span style="color:red"> *</span>
 													<input type="email" class="form-control" name="email" id="email" placeholder="Email" autocomplete="off" required>
-													 <span class="error">* <?php echo $emailErr;?></span>
+
 												</div>
 											</div>
 											<div class="col-md-12">
@@ -156,7 +156,7 @@
 											</div>
 											<div class="col-md-12">
 												<div class="form-group">
-													<label class="label" for="#">Message</label>
+													<label class="label" for="#">Message</label><span style="color:red"> *</span>
 													<textarea name="message" class="form-control" id="message" cols="30" rows="4" placeholder="Message" required></textarea>
 												</div>
 											</div>
