--- a/contact.html
+++ b/contact.html
@@ -239,7 +239,7 @@
 	    <p class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 	      Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
 	      <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-				<p>This website is created by <a href="https://www.linkedin.com/in/akarsh-banthiya-19569377/" target="_blank"><b>Akarsh Banthiya</b>
+				<p>This website is created & managed by <a href="https://www.linkedin.com/in/akarsh-banthiya-19569377/" target="_blank"><b>Akarsh Banthiya</b>
 
 	    </div>
 	  </div>
@@ -267,8 +267,9 @@
 		<script src="js/owl.carousel.min.js"></script>
 		<script src="js/jquery.magnific-popup.min.js"></script>
 		<script src="js/scrollax.min.js"></script>
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+		<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZdUYWh6Eh_-wEY0Vv60D9MWa236u5nAQs&sensor=false"></script> -->
 		<script src="js/google-map.js"></script>
+		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZdUYWh6Eh_-wEY0Vv60D9MWa236u5nAQ&callback=init" type="text/javascript"></script>
 		<script src="js/main.js"></script>
 
 	</body>
