--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 										<label for="name">Full Name</label>
 										<div class="input-wrap">
 											<div class="icon"><span class="fa fa-user"></span></div>
-											<input type="text" class="form-control" placeholder="">
+											<input type="text" class="form-control" placeholder="" autocomplete="off">
 										</div>
 									</div>
 								</div>
@@ -171,7 +171,7 @@
 										<label for="name">Email Address</label>
 										<div class="input-wrap">
 											<div class="icon"><span class="fa fa-paper-plane"></span></div>
-											<input type="email" class="form-control" placeholder="">
+											<input type="email" class="form-control" placeholder="" autocomplete="off">
 										</div>
 									</div>
 								</div>
@@ -641,7 +641,7 @@
 	    <p class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 	      Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
 	      <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-				<p>This website is created by <a href="https://www.linkedin.com/in/akarsh-banthiya-19569377/" target="_blank"><b>Akarsh Banthiya</b>
+				<p>This website is created & managed by <a href="https://www.linkedin.com/in/akarsh-banthiya-19569377/" target="_blank"><b>Akarsh Banthiya</b>
 
 	    </div>
 	  </div>
